Google charts won't correctly render on a hidden element, so added a callback to render chart when general tab becomes visible.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -483,9 +483,6 @@ div.leaflet-bottom.leaflet-right{
 			#graph {
 				width: 300px;
 				height: 150px;
-				margin-left: auto;
-				margin-right: auto;
-				clear: both;
 				margin-top: 7px;
 				margin-bottom: 7px;
 			}
